*
* 0.2.22
*

- Scripts now can be used to form event's message (via %[..] macro)
- Scripts in event processing policy now has access to node properties
  via $node variable and to event properties via $event variable
- Implemented XML encoding for NXCP messages
- Fixed issues: #196, #201, #220, #221


*
* 0.2.21
*

- Multiple network maps implemented
- Added parameter ListenAddress to all services (server, web server, agent)
- New possible value for UseInterfaceAliases - concatenate name with alias
- Added possibility to create custom message in event matching script and
  use it in alarms and actions
- WMI subagent added
- SNMP sysDescr and agent's uname now polled and displayed
- New features in Windows console:
	- Possibility to use non-local timezone in Windows console
	- Default graph settings can be changed
- AIX subagent: implemented System.CPU.LoadAvg* and System.Uptime parameters
- Fixed issues: #193, #194, #198, #204, #209, #211, #212, #213, #214, #215


*
* 0.2.20
*

- Implemented advanced event processing using situations
- Added checking of NetXMS server own network connectivity via beacon hosts
- Implemented "proxy node" functionality for DCIs
- Added possibility to use values of other DCIs in transformation scripts
- Added possibility to specify multiple recipients in e-mail or SMS action
- Implemented System.CPU.Usage for individual processors on Linux
- PING subagent: added parameter ICMP.PacketLoss(*)
- Command line options for the server changed to use common style
- Added UNICODE support in client part on Linux/UNIX
- Implemented macros in template DCIs (expanded when template applies to node)
- Added event storm detection
- Added possibility to specify multiple SNMP community strings for discovery
  and configuration polls
- NetXMS server now can understand interface aliases (description in Cisco terms)
- Added optional synchronization of node names with DNS
- New command line tool for managing alarms - nxalarm