@@ -6,6 +6,7 @@
 - Scripts in event processing policy now has access to node properties
   via $node variable and to event properties via $event variable
 - Implemented XML encoding for NXCP messages
+- Added support of custom object attributes
 - Fixed issues: #196, #201, #220, #221
 
 
